deployment-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: wiki
  name: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      serviceAccountName: pipeline
      containers:
      - image: docker.io/hriships/wiki
        name: wiki
        ports:
        - containerPort: 8080
