deployment-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wiki
  name: wiki
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: wiki
